--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
                 var d = new Date();
                 var year = d.getFullYear();
                 var day = d.getDate();
-                var month = d.getMonth();
+                var month = d.getMonth() + 1;
                 var hours = d.getHours();
                 var mins = d.getMinutes();
                 var secs = d.getSeconds();
                 var milisecs = d.getMilliseconds();
-
+                
                 document.body.innerHTML = day + ":" + month + ":" + year + ":" + hours + ":" + mins + ":" + secs + ":" + milisecs;
             }, 1);
         </script>
