--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Clock</title>
         <meta charset="utf-8">
-        <script>
+        <style>
             body{
                 background-image: linear-gradient(to right, limegreen,lime,cyan,darkcyan);  
             }  
@@ -47,7 +47,7 @@
                 position: relative;
                 text-align: center;
             }
-        </script>
+        </style>
     </head>
     <body>
         <div id="main">
